--- a/likedjobs.html
+++ b/likedjobs.html
@@ -3,13 +3,17 @@
     <head>
         <meta charset="utf-8">
         <title>LinkedOut</title>
-        <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"/>
+        <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"/>
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"/>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="assets/css/main.css">
+        <script type="text/javascript" src="assets/js/aws-sdk.min.js"></script>
+        <script type="text/javascript" src="assets/js/amazon-cognito-identity.min.js"></script>
+        <script type="text/javascript" src="assets/js/utils.js"></script>
+        <script type="text/javascript" src="assets/js/session.js"></script>
 
-        <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
     </head>
     <body>
@@ -110,5 +114,6 @@
     <script type="text/javascript" src="assets/js/likedjobs.js"></script>
     <script type="text/javascript" src="assets/js/utils.js"></script>
     <script type="text/javascript" src="assets/js/aws-sdk.min.js"></script>
+    <script type="text/javascript" src="assets/js/logout.js"></script>
 </body>
 </html>
